@@ -1,3 +1,4 @@
+* Add table view for history
 * Manage mono process batches
 
 Version 1.6 - 2015-12-23
